overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     font-family: 'Poppins', sans-serif;
     background: #F8FDF9;
